--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,9 +1,9 @@
   
-  .section {
-    padding-top: 94px;
-    padding-bottom: 94px;
-  }
+  // .section {
+  //   padding-top: 94px;
+  //   padding-bottom: 94px;
+  // }
 
-  .feture {
-    padding-top: 0px;
-  }
+  // .feture {
+  //   padding-top: 0px;
+  // }
