--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,62 +1,62 @@
-.clients__title {
-    margin-top: 0px;
-    margin-bottom: 50px;
+// .clients__title {
+//     margin-top: 0px;
+//     margin-bottom: 50px;
   
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
+//     font-weight: 700;
+//     font-size: 36px;
+//     line-height: 1.16;
+//     text-align: center;
+//     letter-spacing: 0.03em;
   
-    color: $title-text-color;
-  }
+//     color: $title-text-color;
+//   }
   
-  .clients__list {
-    display: flex;
-    justify-content: center;
-    list-style: none;
+//   .clients__list {
+//     display: flex;
+//     justify-content: center;
+//     list-style: none;
   
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-left: 0px;
-  }
+//     margin-top: 0px;
+//     margin-bottom: 0px;
+//     padding-left: 0px;
+//   }
   
-  .clients__item {
-    margin-right: 30px;
-    margin-top: 0px;
-    margin-bottom: 0px;
+//   .clients__item {
+//     margin-right: 30px;
+//     margin-top: 0px;
+//     margin-bottom: 0px;
 
-    &:last-child {
-        margin-right: 0px;
-      }
-  }
+//     &:last-child {
+//         margin-right: 0px;
+//       }
+//   }
   
 
-  .client__link {
-    transition-property: border, color;
-    transition-duration: $transition-duration;
-    transition-timing-function: $timing-function;
+//   .client__link {
+//     transition-property: border, color;
+//     transition-duration: $transition-duration;
+//     transition-timing-function: $timing-function;
     
-    display: flex;
-    justify-content: center;
+//     display: flex;
+//     justify-content: center;
     
-    width: 170px;
-    height: 92px;
-    left: 215px;
-    top: 2493px;
+//     width: 170px;
+//     height: 92px;
+//     left: 215px;
+//     top: 2493px;
     
-    color: $svg-color;
-    border: 1px solid $svg-color;
-    border-radius: 4px;
+//     color: $svg-color;
+//     border: 1px solid $svg-color;
+//     border-radius: 4px;
 
-    &:hover,
-    &:focus {
-        border-color: $accent-color;
-        color: $accent-color;
-    }
-    }
+//     &:hover,
+//     &:focus {
+//         border-color: $accent-color;
+//         color: $accent-color;
+//     }
+//     }
   
-    .clients-icon {
-      fill: currentColor;
-    }
+//     .clients-icon {
+//       fill: currentColor;
+//     }
  
