--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,17 +1,28 @@
 .container {
-    width: 1200px;
+    width: 100%;
     padding-left: 15px;
     padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
+
+    @media screen and (min-width: 480px) {
+      width: 480px;
+    }
+
+    @media screen and (min-width: 768px) {
+      width: 768px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: 1200px;
+    }
   }
 
- .page__container {
-   display: flex;
-  justify-content: space-between;
- }
+//  .page__container {
+//    display: flex;
+//   justify-content: space-between;
+//  }
 
- .footer__container {
-   display: flex;
-   align-items: baseline;
- }
+//  .footer__container {
+//    display: flex;
+//    align-items: baseline;
+//  }
