--- a/sass/components/_footer-form.scss
+++ b/sass/components/_footer-form.scss
@@ -1,40 +1,40 @@
-.footer__form {
-    display: flex;
-    align-items: flex-end;
-  }
+// .footer__form {
+//     display: flex;
+//     align-items: flex-end;
+//   }
   
-  .footer__sign {
-    width: 358px;
-  }
+//   .footer__sign {
+//     width: 358px;
+//   }
   
-  .footer__label {
-    display: block;
-    color: $hero-title-color;
-    margin-bottom: 20px;
+//   .footer__label {
+//     display: block;
+//     color: $hero-title-color;
+//     margin-bottom: 20px;
   
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-  }
+//     font-weight: 700;
+//     font-size: 14px;
+//     line-height: 16px;
+//     letter-spacing: 0.03em;
+//     text-transform: uppercase;
+//   }
   
-  .footer__input {
-    padding-left: 16px;
+//   .footer__input {
+//     padding-left: 16px;
     
-     width: 358px;
-     height: 50px;
+//      width: 358px;
+//      height: 50px;
     
-     background-color: transparent;
-     border: 1px solid rgba(255, 255, 255, 0.3);
-     box-sizing: border-box;
-     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-     border-radius: 4px;
-     color: $hero-title-color;
+//      background-color: transparent;
+//      border: 1px solid rgba(255, 255, 255, 0.3);
+//      box-sizing: border-box;
+//      filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+//      border-radius: 4px;
+//      color: $hero-title-color;
 
-     &::placeholder {
-        font-size: 16px;
-        line-height: 1.25;
-        letter-spacing: 0.03em;
-     }
-    }
+//      &::placeholder {
+//         font-size: 16px;
+//         line-height: 1.25;
+//         letter-spacing: 0.03em;
+//      }
+//     }
