--- a/sass/components/_form-close.scss
+++ b/sass/components/_form-close.scss
@@ -1,26 +1,26 @@
-.form__button--close {
-    transition-property: fill;
-    transition-duration: $transition-duration;
-    animation-timing-function: $timing-function;
+// .form__button--close {
+//     transition-property: fill;
+//     transition-duration: $transition-duration;
+//     animation-timing-function: $timing-function;
   
-    position: absolute;
-    top: 8px;
-    right: 8px;
+//     position: absolute;
+//     top: 8px;
+//     right: 8px;
   
-    cursor: pointer;
+//     cursor: pointer;
   
-    margin: 0px;
-    padding: 0px;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background-color: $hero-title-color;
-    border: 1px solid rgba(0, 0, 0, 0.1);
+//     margin: 0px;
+//     padding: 0px;
+//     width: 30px;
+//     height: 30px;
+//     border-radius: 50%;
+//     background-color: $hero-title-color;
+//     border: 1px solid rgba(0, 0, 0, 0.1);
 
-    &:hover,
-    &:focus {
-        fill: $accent-color;
-    }
-  }
+//     &:hover,
+//     &:focus {
+//         fill: $accent-color;
+//     }
+//   }
   
   
