--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,65 +1,65 @@
 
-  .form__title {
-    margin-top: 0px;
-    margin-bottom: 12px;
+  // .form__title {
+  //   margin-top: 0px;
+  //   margin-bottom: 12px;
   
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.15;
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: $title-text-color;
-  }
+  //   font-weight: 700;
+  //   font-size: 20px;
+  //   line-height: 1.15;
+  //   text-align: center;
+  //   letter-spacing: 0.03em;
+  //   color: $title-text-color;
+  // }
   
-  .form__field {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-    position: relative;
-  }
+  // .form__field {
+  //   display: flex;
+  //   flex-direction: column;
+  //   margin-bottom: 10px;
+  //   position: relative;
+  // }
   
-  .form__input {
-    transition-property: outline-color, border-color;
-    transition-duration: $transition-duration;
-    animation-timing-function: $timing-function;
+  // .form__input {
+  //   transition-property: outline-color, border-color;
+  //   transition-duration: $transition-duration;
+  //   animation-timing-function: $timing-function;
   
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-left: 42px;
+  //   margin-top: 0px;
+  //   margin-bottom: 0px;
+  //   padding-left: 42px;
     
-    width: 448px;
-    height: 40px;
+  //   width: 448px;
+  //   height: 40px;
   
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    box-sizing: border-box;
-    border-radius: 4px;
+  //   border: 1px solid rgba(33, 33, 33, 0.2);
+  //   box-sizing: border-box;
+  //   border-radius: 4px;
 
-    &:focus {
-      border-color: $accent-color;
-      outline-color: $accent-color;
-    }
-  }
+  //   &:focus {
+  //     border-color: $accent-color;
+  //     outline-color: $accent-color;
+  //   }
+  // }
   
-  .form__label {
+  // .form__label {
   
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
-    margin-bottom: 4px;
-  }
+  //   font-size: 12px;
+  //   line-height: 1.16;
+  //   letter-spacing: 0.01em;
+  //   margin-bottom: 4px;
+  // }
   
-  .form__icon {
-    transition-property: fill;
-    transition-duration: $transition-duration;
-    animation-timing-function: $timing-function;
+  // .form__icon {
+  //   transition-property: fill;
+  //   transition-duration: $transition-duration;
+  //   animation-timing-function: $timing-function;
   
-    position: absolute;
-    top: 50%;
-    left: 15px;
+  //   position: absolute;
+  //   top: 50%;
+  //   left: 15px;
 
-    .form__input:focus + & {
-      fill: $accent-color;
-    }
-  }
+  //   .form__input:focus + & {
+  //     fill: $accent-color;
+  //   }
+  // }
   
 
