--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -1,11 +1,11 @@
-.feature__title {
-    margin-top: 0px;
-    margin-bottom: 50px;
+// .feature__title {
+//     margin-top: 0px;
+//     margin-bottom: 50px;
   
-    color: $title-text-color;
+//     color: $title-text-color;
   
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-  }
+//     font-weight: 700;
+//     font-size: 36px;
+//     line-height: 1.16;
+//     text-align: center;
+//   }
