--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,3 +1,125 @@
+.clients__title {
+    margin-top: 0px;
+    margin-bottom: 50px;
+  
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+  
+    color: $title-text-color;
+  }
+
+  .clients__list {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+ 
+    padding-left: 0px;
+
+    @media screen and (min-width: 320px) and (max-width: 1199px) {
+      margin: -15px;
+    }
+
+    @media screen and (min-width: 1200px) {
+      margin-top: 0px;
+      margin-bottom: 0px;
+    }
+    
+  }
+  
+
+//         @media screen and (min-width: 480px) {
+//             margin-bottom: 30px;
+//         width: 210px;
+//      }
+//         width: calc(100% / 2 - 30px);
+
+//         @media screen and (max-width: 767px) {
+
+//         &:nth-child(2n + 1) {
+//         margin-right: 30px;
+//      }
+
+//         &:nth-last-child(-n + 2) {
+//         margin-bottom: 0px;
+//      }
+//     }
+
+//     @media screen and (min-width: 768px) {
+//         width: 226px;
+//         width: calc(100% / 3 - 30px);'
+//         margin-right: 30px;
+//         @media screen and (max-width: 1199px) {
+        
+
+//         }
+//     }
+//   }
+  
+    .client__link {
+    transition-property: border, color;
+    transition-duration: $transition-duration;
+    transition-timing-function: $timing-function;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    height: 92px;
+    
+    color: $svg-color;
+    border: 1px solid $svg-color;
+    border-radius: 4px;
+
+    &:hover,
+    &:focus {
+        border-color: $accent-color;
+        color: $accent-color;
+        }
+    }
+
+    .clients__item {
+
+      @media screen and (min-width: 320px) and (max-width: 767px) {
+        width: calc(100% / 2 - 30px);
+        margin: 15px;
+      }
+
+
+      @media screen and (min-width: 768px) and (max-width: 1199px) {
+        width: calc(100% / 3 - 30px);
+        margin: 15px;
+      }
+      
+      @media screen and (min-width: 1200px) {
+        flex-wrap: nowrap;
+        width: 170px;
+
+        margin-right: 30px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+
+        &:last-child {
+        margin-right: 0px;
+      }
+      }
+    }
+    
+
+     
+    
+    
+    .clients-icon {
+      fill: currentColor;
+    }
+
+
+
+
+
+
 // .clients__title {
 //     margin-top: 0px;
 //     margin-bottom: 50px;
