--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,7 +1,88 @@
-// .team {
-//     background-color: $secondary-background-color;
-//   }
+.team {
+    background-color: $secondary-background-color;
+  }
+
+  .team__title {
+    margin-top: 0px;
+    margin-bottom: 30px;
+    text-align: center;
   
+    color: $title-text-color;
+  
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 1.17;
+  }
+
+    .team__list {
+
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-left: 0px;
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        display: flex;
+        flex-wrap: wrap;
+        margin: -15px;
+    }
+
+    @media screen and (min-width: 1199px) {
+        display: flex;
+  }
+}
+
+  .team__item {
+        padding-bottom: 24px;
+        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 2px 1px rgba(0, 0, 0, 0.2);
+        border-radius: 0px 0px 4px 4px;
+        background-color: $hero-title-color;
+        margin-bottom: 30px;
+
+        @media screen and (min-width: 767px) and (max-width:1199px) {
+        width: calc(100% / 2 - 30px);
+        margin: 15px;
+        }
+
+        @media screen and (min-width: 1200px) {
+            &:not(:last-child) {
+                margin-right: 30px;
+              }
+            margin-bottom: 0px;
+        }
+      }
+
+    .team__subtitle {
+      margin-bottom: 10px;
+      margin-top: 0px;
+  
+      color: $title-text-color;
+    
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 1.18;
+      text-align: center;
+      letter-spacing: 0.03em;
+    }
+
+        .team__contant {
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 1.18;
+      margin-top: 0px;
+      margin-bottom: 16px;
+    }
+  
+    .team__pct {
+      margin-bottom: 30px;
+      max-width: 100%;
+      display: block;
+      height: auto;
+    }
+
+
 //   .team__title {
 //     margin-top: 0px;
 //     margin-bottom: 50px;
