--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,27 @@
   }
 }
 
+.hero {
+  background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-background-mob.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-background-mob.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  text-align: center;
+}
+
+.hero__title {
+  color: #ffffff;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.61;
+  text-align: center;
+  letter-spacing: 0.06em;
+  max-width: 360px;
+  height: auto;
+  text-transform: uppercase;
+}
+
 .benefits__icon {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -172,6 +193,20 @@
   -webkit-clip-path: inset(50%);
           clip-path: inset(50%);
   margin: -1px;
+}
+
+.hero__title {
+  color: #ffffff;
+  font-weight: 900;
+  font-size: 26px;
+  line-height: 1.61;
+  text-align: center;
+  letter-spacing: 0.06em;
+  max-width: 360px;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  text-transform: uppercase;
 }
 
 .feature__title {
@@ -461,4 +496,21 @@
 
 .social__icon {
   fill: currentColor;
+}
+
+.hero__button {
+  color: #ffffff;
+  background-color: #2196f3;
+  font-family: Roboto;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  border-radius: 4px;
+  border: none;
+  padding-left: 32px;
+  padding-right: 32px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  cursor: pointer;
 }/*# sourceMappingURL=main.css.map */
