--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,4 +1,42 @@
 
+.hero {
+    background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/hero-background-mob.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    text-align: center;
+    
+  }
+
+    .hero__title {
+    color: $hero-title-color;
+  
+    font-weight: 900;
+    font-size: 26px;
+    line-height: 1.61;
+    text-align: center;
+    letter-spacing: 0.06em;
+    max-width: 360px;
+    height: auto;
+
+    text-transform: uppercase;
+  } 
+
+
+
+
+
+
+
+
+
+
+
+
 // .hero {
 //   background-image: linear-gradient(
 //     rgba(47, 48, 58, 0.4),
