--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -9,22 +9,27 @@
     background-repeat: no-repeat;
     background-position: center;
     text-align: center;
+
+    @media screen and (min-width: 767px) {
+      background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero-background-tablet-1x.jpg);
+    }
+
+    @media screen and (min-width: 1199px) {
+      background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+      ),
+      url(../images/hero-background.jpg);
+    }
     
   }
 
-    .hero__title {
-    color: $hero-title-color;
-  
-    font-weight: 900;
-    font-size: 26px;
-    line-height: 1.61;
-    text-align: center;
-    letter-spacing: 0.06em;
-    max-width: 360px;
-    height: auto;
 
-    text-transform: uppercase;
-  } 
+
 
 
 
