--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -18,6 +18,58 @@
     cursor: pointer;
   }
 
+    .form__button--submit {
+    display: flex;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 10px 56px;
+  
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.85;
+    letter-spacing: 0.06em;
+    color: $hero-title-color;
+  
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+  
+    background-color: $accent-color;
+    border: none;
+    cursor: pointer;
+  } 
+
+  .footer__button {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        padding: 0 0;
+      
+        width: 200px;
+        height: 50px;
+      
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.87;
+        letter-spacing: 0.06em;
+      
+        color: $hero-title-color;
+        background-color: $accent-color;
+      
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+      
+        cursor: pointer;
+    
+        &--icon {
+          margin-left: 10px;
+        }
+      }
+      
+
 
 
 // .hero__button {
