--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -1,3 +1,60 @@
+
+  
+  .mail__icon {
+    margin-right: 10px;
+    fill: currentColor;
+   }
+   
+   .tel__icon {
+     margin-right: 10px;
+     fill: currentColor;
+   }
+  
+  .header {
+    border: 1px solid $header-border-color;
+  }
+  
+
+  .footer__list {
+    margin-top: 0px;
+    margin-bottom: 60px;
+    list-style: none;
+    padding-left: 0px;
+  }
+  
+  .footer__mail--item,
+  .footer__tel--item {
+    display: inline-block;
+    transition-property: color;
+    transition-duration: $transition-duration;
+    transition-timing-function: $timing-function;
+  
+    color: $link-color;
+  
+    font-style: normal;
+    font-weight: 400;
+  
+    font-size: 14px;
+    line-height: 1.71;
+  
+    text-decoration: none;
+
+    &:hover,
+    &:focus {
+        color: $accent-color;
+    }
+  }
+
+  
+  .footer__mail {
+    margin-bottom: 9px;
+  }
+
+
+
+
+
+
 // .header-contacts {
 //     display: flex;
 //     list-style: none;
