--- a/sass/components/_footer-logo.scss
+++ b/sass/components/_footer-logo.scss
@@ -1,3 +1,31 @@
+.footer__logo {
+    
+    color: $hero-title-color;
+    display: inline-block;
+  
+    margin-top: 0px;
+    margin-bottom: 20px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+  
+    margin-top: 0px;
+
+    font-family: raleway;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.16;
+    letter-spacing: 0.03em;
+
+    text-decoration: none;
+
+    &--white {
+        color: $accent-color;
+        margin-top: 0px;
+    }
+  }
+
+
+
 // .footer__logo {
     
 //     color: $hero-title-color;
