--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,10 @@
   }
 }
 
+.benefits {
+  padding-bottom: 0px;
+}
+
 .container {
   width: 100%;
   padding-left: 15px;
@@ -58,6 +62,20 @@
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+  }
+}
+
 .hero {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-background-mob.jpg);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-background-mob.jpg);
@@ -76,6 +94,8 @@
   .hero {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-background.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-background.jpg);
+    padding-top: 200px;
+    padding-bottom: 200px;
   }
 }
 
@@ -437,7 +457,7 @@
   color: #2196f3;
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 768px) {
   .clients__item {
     width: calc(50% - 30px);
     margin: 15px;
@@ -471,7 +491,6 @@
   background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
-  text-align: center;
 }
 .footer__adress {
   color: #ffffff;
@@ -481,8 +500,13 @@
   margin-top: 0px;
   margin-bottom: 9px;
 }
+@media screen and (min-width: 320px) and (max-width: 1199px) {
+  .footer {
+    text-align: center;
+  }
+}
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
   .footer__flex-container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -493,6 +517,18 @@
         -ms-flex-align: baseline;
             align-items: baseline;
     font-weight: 700;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .footer__flex-container {
+    margin-bottom: 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__flex-container {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 
@@ -566,11 +602,15 @@
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
-  text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-top: 0px;
   margin-bottom: 20px;
+}
+@media screen and (max-width: 1199px) {
+  .footer__social--title {
+    text-align: center;
+  }
 }
 
 .footer__social--list {
@@ -640,7 +680,7 @@
   margin-bottom: 20px;
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.17px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 }
@@ -656,40 +696,68 @@
           filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   color: #ffffff;
+  padding-left: 16px;
 }
 .footer__input::-webkit-input-placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  padding-left: 16px;
 }
 .footer__input::-moz-placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  padding-left: 16px;
 }
 .footer__input:-ms-input-placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  padding-left: 16px;
 }
 .footer__input::-ms-input-placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  padding-left: 16px;
 }
 .footer__input::placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  padding-left: 16px;
+}
+@media screen and (min-width: 767px) {
+  .footer__input {
+    max-width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__input {
+    width: 358px;
+  }
 }
 
 .footer__sign {
   margin-bottom: 20px;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer__sign {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .footer__sign {
+    padding-right: 20px;
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+  }
 }
 
 .mail__icon {
@@ -708,9 +776,13 @@
 
 .footer__list {
   margin-top: 0px;
-  margin-bottom: 60px;
   list-style: none;
   padding-left: 0px;
+}
+@media screen and (min-width: 320px) and (max-width: 768px) {
+  .footer__list {
+    margin-bottom: 60px;
+  }
 }
 
 .footer__mail--item,
@@ -737,6 +809,12 @@
 
 .footer__mail {
   margin-bottom: 9px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__contacts {
+    margin-right: 70px;
+  }
 }
 
 .hero__button {
