--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -17,9 +17,13 @@
 
   .footer__list {
     margin-top: 0px;
-    margin-bottom: 60px;
+
     list-style: none;
     padding-left: 0px;
+
+    @media screen and (min-width: 320px) and (max-width: 768px) {
+      margin-bottom: 60px;
+    }
   }
   
   .footer__mail--item,
@@ -50,6 +54,11 @@
     margin-bottom: 9px;
   }
 
+  .footer__contacts {
+    @media screen and (min-width: 1200px) {
+      margin-right: 70px;
+    }
+  }
 
 
 
