--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -24,6 +24,8 @@
         rgba(47, 48, 58, 0.4)
       ),
       url(../images/hero-background.jpg);
+      padding-top: 200px;
+      padding-bottom: 200px;
     }
     
   }
