--- a/sass/components/_social-links.scss
+++ b/sass/components/_social-links.scss
@@ -128,12 +128,16 @@
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
-    text-align: center;
+
     letter-spacing: 0.03em;
     text-transform: uppercase;
 
     margin-top: 0px;
     margin-bottom: 20px;
+
+    @media screen and (max-width: 1199px) {
+      text-align: center;
+    }
   }
   
   .footer__social--list {
@@ -149,7 +153,6 @@
 
     @media screen and (min-width: 767px) {
       margin-bottom: 0px;
-
     }
   }
   
